RESOLVED FIXED209771
[Tables] Infinite recursion in RenderTreeBuilder::attach
https://bugs.webkit.org/show_bug.cgi?id=209771
Summary [Tables] Infinite recursion in RenderTreeBuilder::attach
alan
Reported 2020-03-30 14:36:18 PDT
Attachments
Patch (8.95 KB, patch)
2020-03-30 15:02 PDT, alan
no flags
Patch (9.00 KB, patch)
2020-03-30 16:28 PDT, alan
no flags
Patch (18.46 KB, patch)
2020-03-30 20:14 PDT, alan
no flags
Patch (21.58 KB, patch)
2020-03-31 09:26 PDT, alan
no flags
alan
Comment 1 2020-03-30 15:02:34 PDT
alan
Comment 2 2020-03-30 16:28:58 PDT
alan
Comment 3 2020-03-30 20:14:14 PDT
alan
Comment 4 2020-03-31 09:26:47 PDT
EWS
Comment 5 2020-03-31 10:04:04 PDT
Committed r259296: <https://trac.webkit.org/changeset/259296> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395049 [details].
Note You need to log in before you can comment on or make changes to this bug.