[Tables] Infinite recursion in RenderTreeBuilder::attach https://bugs.webkit.org/show_bug.cgi?id=209771 <rdar://problem/59923112>

Reviewed by Simon Fraser.

Source/WebCore:

Let's construct a COLGROUP wrapper when a COL element is inserted into a <table>. The rest of the table code assumes such structure.
(https://www.w3.org/TR/html52/tabular-data.html#the-col-element)

Test: fast/table/anonymous-colgroup-simple.html

* rendering/RenderTableCol.cpp:
(WebCore::RenderTableCol::RenderTableCol):
(WebCore::RenderTableCol::updateFromElement):
* rendering/RenderTableCol.h:
* rendering/updating/RenderTreeBuilderTable.cpp:
(WebCore::RenderTreeBuilder::Table::findOrCreateParentForChild):

LayoutTests:

* fast/table/anonymous-colgroup-simple-expected.txt: Added.
* fast/table/anonymous-colgroup-simple.html: Added.


Canonical link: https://commits.webkit.org/222731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259296 268f45cc-cd09-0410-ab3c-d52691b4dbfc