Source/WebCore/rendering/RenderTableCol.cpp
@@ -49,6 +49,12 @@ RenderTableCol::RenderTableCol(Element& element, RenderStyle&& style)
     updateFromElement();
 }
 
+RenderTableCol::RenderTableCol(Document& document, RenderStyle&& style)
+    : RenderBox(document, WTFMove(style), 0)
+{
+    setInline(true);
+}
+
 void RenderTableCol::styleDidChange(StyleDifference diff, const RenderStyle* oldStyle)
 {
     RenderBox::styleDidChange(diff, oldStyle);
@@ -77,9 +83,10 @@ void RenderTableCol::styleDidChange(StyleDifference diff, const RenderStyle* old
 
 void RenderTableCol::updateFromElement()
 {
+    ASSERT(element());
     unsigned oldSpan = m_span;
-    if (element().hasTagName(colTag) || element().hasTagName(colgroupTag)) {
-        HTMLTableColElement& tc = static_cast<HTMLTableColElement&>(element());
+    if (element()->hasTagName(colTag) || element()->hasTagName(colgroupTag)) {
+        HTMLTableColElement& tc = static_cast<HTMLTableColElement&>(*element());
         m_span = tc.span();
     } else
         m_span = !(hasInitializedStyle() && style().display() == DisplayType::TableColumnGroup);
